refactor/clean-up grammar and type ref builder